Linked bootstrap's css and js to index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Nutrition Tracker</title>
     
     <!-- Bootstrap generic styling-->
-    <link href="lib/bootstrap-3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     
 </head>
 <body>
@@ -17,5 +17,7 @@
    
     <!--google's cdn of jquery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <!-- Include all compiled plugins for Bootstrap -->
+    <script src="lib/bootstrap.min.js"></script>
 </body>
 </html>
