--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
    
    
    
-    <!-- Include google's cdn of jquery-->
+    <!-- CDN: Include google's cdn of jquery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <!-- Include all compiled plugins for Bootstrap -->
     <script src="lib/bootstrap.min.js" type="text/javascript"></script>
+    <!-- CDN: Include cloudfire's cdn of underscore.js-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <!-- Include backbone.js -->
     <script src="lib/backbone.min.js" type="text/javascript"></script> 
     <!-- Load app's main javascript -->
