Added comments to explain the jobs of views, collections, and models.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     
         </div>
     </div>
-    <!--hidden search button css -->
+    <!--hidden search new entry button css -->
     <div class="hidden" id="newEntryCSS">
         <div class="actionButtonBackground">
         </div>
