Added glyphicon's to add and delete buttons

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <h4 class='ItemCalories'><%= nf_calories%></h4>
             </div>
             <div>
-                <button class='btn-danger'>Delete</button>
+                <button class='btn-danger'><span class='glyphicon glyphicon-trash'></span></button>
             </div>
         </div>
     </script>
@@ -112,7 +112,7 @@
             
         </div>
         <div class='row text-center'>
-            <button class="btn-success">Add</button>
+            <button class="btn-success"><span class='glyphicon glyphicon-plus'></span></button>
         <div>
     </div>
         
