Added food's srv size and brand attributes to display in food log

--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
         <div class='row'>
             <div class='col-sm-9'>
                 <h4 class='ItemName'><%= item_name%></h4>
+                <p class='ItemBrand'><%= brand_name%></p>
+                <p class='ItemSrvSize'><%= nf_serving_size_qty%></p>
             </div>
             <div class='col-sm-3'>
                 <h4 class='ItemCalories'><%= nf_calories%></h4>
