--- a/testIndex.html
+++ b/testIndex.html
@@ -22,6 +22,9 @@
             padding-top: 10px;
             padding-bottom: 10px;
             border-radius: 10px;
+            -webkit-box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.66);
+            -moz-box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.66);
+            box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.66);
         }
         #newEntryButton{
             width: 70px;
