--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <h4 class='ItemCalories'><%= nf_calories%></h4>
             </div>
             <div>
-                <button class='btn-danger'><span class='glyphicon glyphicon-trash'></span></button>
+                <button class='appButton delete'><span class='glyphicon glyphicon-trash'></span></button>
             </div>
         </div>
     </script>
@@ -109,8 +109,8 @@
             </div>
             
         </div>
-        <div class='row text-center'>
-            <button class="btn-success"><span class='glyphicon glyphicon-plus'></span></button>
+        <div class='row'>
+            <button class='appButton add'><span class='glyphicon glyphicon-plus'></span></button>
         <div>
     </div>
         
