Added loading gif to display while ajax call is being fetched

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                 </div>
                 <!--dynamic div -->
                 <div id="resultsContainer">
-                            
+                    <div class='text-center hidden'id="loadingIcon">
+                        <img src="img/ajax-loader.gif" />
+                    </div>       
                 </div>
             </div>
             <!--FOOD LOG DISPLAY-->
