--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
                 </div>
                 <!--dynamic div -->
                 <div id="resultsContainer">
+                    <!--loading icon-->
                     <div class='text-center hidden'id="loadingIcon">
                         <img src="img/ajax-loader.gif" />
-                    </div>       
+                    </div> 
+                    
                 </div>
             </div>
             <!--FOOD LOG DISPLAY-->
